# itmo-exciting-stuff

./: itmo-exciting.cabal  stack.yaml
nondominating/: Main.hs  launch
nondominating/inputs/: multid1  problem1  problem2  problem3
onemax/: Main.hs
src/: ProbabolisticPrograms.hs
